# python-monorepo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
flows/: simple_flow.py
flows/pokeflow/: Debugger flow.ipynb  main.py
flows/pokeflow/.ipynb_checkpoints/: Debugger flow-checkpoint.ipynb
flows/pokeflow/pokemon/: api.py  db.py  typing.py
libs/randnamegen/: pyproject.toml
libs/randnamegen/randnamegen/: __init__.py  pokemon.py
libs/randnamegen/tests/: test_pokemon.py  test_randnamegen.py
projects/Bulk Update SQLAlchemy/: main.py  pyproject.toml
projects/Bulk Update SQLAlchemy/src/: db.py
projects/dask_ml_model_example/: 1 - Pandas.ipynb  2 - Pandas + Sklearn Pipelines.ipynb  README.md  pyproject.toml
projects/dask_ml_model_example/.ipynb_checkpoints/: 1 - Pandas-checkpoint.ipynb  3 - Splited Responsabilities-checkpoint.ipynb
projects/dask_ml_model_example/src/: pipelines.py
projects/email-text-similarity/: main.py  pyproject.toml
projects/email-text-similarity/src/: config.py
projects/pokecli/: README.md  main.py  pyproject.toml
projects/pokecli/src/: api.py
projects/simple_api/: pyproject.toml
projects/simple_api/simple_api/: main.py
projects/simple_api/tests/: test_simple_api.py
