[tool.poetry]
name = "python-monorepo"
version = "0.1.0"
description = ""
authors = ["Gustavo de Souza Gonçalves <goncalves.gustavo211@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
randnamegen = {path = "libs/randnamegen"}
fastapi = "^0.74.0"
pydocstyle = {extras = ["toml"], version = "^6.1.1"}
prefect = "^1.2.0"
httpx = "^0.22.0"
pandas = "^1.4.2"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.35"}
pydantic = "^1.9.0"
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
blue = "^0.7.0"
pydocstyle = "^6.1.1"
coverage = "^6.3.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"