[tool.poetry]
name = "dask_ml_model_example"
version = "0.1.0"
description = ""
authors = ["Gustavo de Souza Gonçalves <goncalves.gustavo211@gmail.com>"]

[tool.poetry.dependencies]  
python = ">=3.9,<3.10"
jupyterlab = "^3.3.4"
dask = "^2022.4.1"
llvmlite = "0.36.0rc1"
dask-ml = "^2022.1.22"
seaborn = "^0.11.2"
autoviz = "^0.1.38"
sweetviz = "^2.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
