[tool.poetry]
name = "email-text-similarity"
version = "0.1.0"
description = ""
authors = ["Gustavo de Souza Gonçalves <goncalves.gustavo211@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
textdistance = {extras = ["extras"], version = "^4.2.2"}

[tool.poetry.dev-dependencies]
blue = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
