[tool.poetry]
name = "pokecli"
version = "0.1.0"
description = ""
authors = ["Gustavo de Souza Gonçalves <goncalves.gustavo211@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
httpx = "^0.22.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
blue = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
